Fix mobile padding and hide overlapping resume button

--- a/src/components/styles/SocialIcons.css
+++ b/src/components/styles/SocialIcons.css
@@ -101,3 +101,8 @@ div.resume-button span {
     margin-top: -1.5px;
   }
 }
+@media only screen and (max-width: 767px) {
+  .resume-button {
+    display: none !important;
+  }
+}
